<resources>
    <string name="app_name">TP2_INF8405_Version_2_1</string>
    <string name="title_activity_meeting_setup">meeting_setup</string>
    <string name="title_activity_meeting__setup">Meeting_Setup</string>
    <string name="google_maps_api_key">AIzaSyAfxpg_fmOQhZkk14jn8x4Do3DBOUap6wo </string>
    <string name="title_activity_group__choice_">Group_Choice_Activity</string>
    <string name="place_image">Place View</string>
    <string name="description">description</string>
    <string name="place_name">Place Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_vote_activity">Ratings</string>
    <string name="title_activity_event_activity">Places</string>
    <string name="action_ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit_group">Quit Group</string>
    <string name="dialog_title_save_ratings">Save Ratings</string>
    <string name="dialog_message_save_ratings">Save your ratings into the database</string>
    <string name="title_activity_participate_event">ParticipateEventActivity</string>
    <string name="title_activity_chose_event">ChoseEventActivity</string>
    <string name="dontParticipate">Do not participate</string>
    <string name="mayparticipate">Maybe</string>
    <string name="participate">Yes</string>
    <string name="doNotParticipate">No</string>
    <string name="mayParticipate">Maybe</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="action_logout">Log out</string>
</resources>
