<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_ok"
        android:icon="@drawable/ic_action_check_name"
        android:title="@string/action_ok"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_quit_group"
        android:icon="@drawable/ic_action_exit_name"
        android:title="@string/action_exit_group"
        app:showAsAction="ifRoom"/>




    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"/>


</menu>