<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/participate_radio_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:visibility="gone"
    android:weightSum="3">

    <RadioButton
        android:id="@+id/participate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onParticipateRadioButtonClicked"
        android:text="@string/participate" />

    <RadioButton
        android:id="@+id/mayParticipate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onParticipateRadioButtonClicked"
        android:text="@string/mayParticipate" />

    <RadioButton
        android:id="@+id/doNotParticipate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onParticipateRadioButtonClicked"
        android:text="@string/doNotParticipate" />
</RadioGroup>