<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.abbas.tp2_inf8405_version_2_1.ParticipateEventActivity"
    tools:showIn="@layout/activity_chose_event">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/group_radio_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/myRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/eventStartingDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="showDatePickerDialog" />

            <TextView
                android:id="@+id/eventStartingTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="showTimePickerDialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/eventEndingDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="showDatePickerDialog" />

            <TextView
                android:id="@+id/eventEndingTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="showTimePickerDialog" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/participate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/participate" />

            <RadioButton
                android:id="@+id/mayParticipate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mayParticipate" />

            <RadioButton
                android:id="@+id/doNotParticipate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doNotParticipate" />
        </RadioGroup>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.example.abbas.tp2_inf8405_version_2_1.ParticipateEventActivity" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
